--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>js-task-2.</h1>
-    <script src="/js/reshenie.js"></script>
+    <script src="/js/task5.1.js"></script>
   </body>
 </html>
